logs/Slang/generated/hdlconv/hdlconvertor_p172.sv.log
name: hdlconvertor_p172
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p172.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p172.sv:1:23: error: use of undeclared identifier 'obj_example'
task task1(integer a, obj_example myexample);
                      ^~~~~~~~~~~
